点播列表增加房间号

--- a/app/scripts/views/biz/teacher/update.html
+++ b/app/scripts/views/biz/teacher/update.html
@@ -9,6 +9,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>账户信息</h4>
+                        <h3 class="col-sm-offset-2 text-primary">必须是已经关注Ahaschool公众号并且绑定过的手机号码才能添加为教师</h3>
                         <div form-input text="教师姓名" ng-model="param.name" placeholder="教师姓名" required="true"></div>
 
                         <div form-input text="初始化密码" ng-model="param.password" placeholder="初始化密码" required="true"
