--- a/app/scripts/views/biz/menu/menus.html
+++ b/app/scripts/views/biz/menu/menus.html
@@ -13,12 +13,24 @@
 <div class="panel panel-primary menu-panel">
     <div class="panel-heading">菜单管理</div>
     <div class="panel-body ">
-        <common_form form_param="param" form_init_data="{sort:menus.length+1}" form_url="add_url"
-                     form_title="'新增主菜单'" callback="getapi"
-                     btn-class="btn btn-primary btn-rounded pull-right btn-bordered visible-lg">
-            <i class="fa fa-plus"></i>
-        </common_form>
-        <uib-accordion>
+        <div class="row">
+            <div class="col-sm-4">
+                <common_form form_param="param" form_init_data="{sort:menus.length+1}" form_url="add_url"
+                             form_title="'新增主菜单'" callback="getapi"
+                             btn-class="btn btn-primary btn-rounded btn-bordered visible-lg pull-left">
+                    <i class="fa fa-plus"></i>
+                </common_form>
+            </div>
+            <div class="col-sm-4">
+                <div class="checkbox">
+                    <label class="checkbox-inline checkbox1">
+                        <input type="checkbox" ng-model="oneAtATime" ng-init="oneAtATime=true"> <span></span>
+                        一次只打开一个来编辑</label>
+                </div>
+            </div>
+        </div>
+
+        <uib-accordion close-others="oneAtATime">
             <div uib-accordion-group heading="{{menu.sort+'&nbsp;&nbsp;&nbsp;'+menu.name+'( ID:'+menu.id+')'}}"
                  ng-repeat="menu in menus" class="panel panel-default panel-info">
                 <div class="accordion-heading row">
