批量修改活动功能

--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -47,11 +47,11 @@
 
                         <!--<div form-image-content text="图文详情" ng-model="param.contents" ng-show="param.content_type==1"></div>-->
                         <div form-input text="活动ID" ng-model="param.product_id"
-                             ng-show="$stateParams.product_id"
+                             ng-show="param.product_id"
                              placeholder="活动ID" ng-disabled="$stateParams.product_id"></div>
                         <div form-input text="活动标题" ng-model="param.title" placeholder="活动标题,不超过30个字" required="true"
                              minlength="1" maxlength="30"></div>
-                        <div form-radio text="SKU" type="radio" ng-model="param.sku" required="true" default="1"
+                        <div form-radio text="SKU" type="radio" ng-model="param.sku" required="true" default="1" type="number"
                              source="[{text:'活动',value:'1'},{text:'测评',value:'2'},{text:'众筹',value:'3'},{text:'年卡',value:'4'},
                              {text:'会员',value:'5'},{text:'测试',value:'6'},{text:'其他',value:'7'},{text:'霸王团',value:'8'}
                              ,{text:'课程',value:'9'},{text:'博物馆直播',value:'10'},{text:'名校直播',value:'11'},{text:'成人演讲',value:'12'}
