--- a/app/scripts/views/biz/lessons/update.html
+++ b/app/scripts/views/biz/lessons/update.html
@@ -125,7 +125,7 @@
                                             <span ng-bind="item.option_id"></span>
                                         </td>
                                         <td class="text-center">
-                                            <span ng-bind="item.option_type|product_category"></span>
+                                            <span ng-bind="item.option_type|keyVal:'2':'人数团':'3':'直接买':'4':'礼包'"></span>
                                         </td>
                                         <td class="text-center">
                                             <span ng-bind="item.option_name"></span>
