--- a/app/scripts/views/biz/live_rooms/update.html
+++ b/app/scripts/views/biz/live_rooms/update.html
@@ -30,7 +30,7 @@
 
                         <div form-radio text="订单类型" type="radio" ng-model="param.sku" required="true" default="10"
                              source="[{text:'博物馆直播',value:'10'},{text:'名校直播',value:'11'},{text:'成人演讲',value:'12'}
-                             ,{text:'免费',value:'0'}]" source-api=""></div>
+                             ,{text:'少年好声音',value:'13'},{text:'免费',value:'0'}]" source-api=""></div>
 
                         <div form-input text="分享URL" ng-model="param.share_url" placeholder="分享URL"></div>
 
